--- a/src/main/webapp/app/entities/product/detail/product-detail.component.html
+++ b/src/main/webapp/app/entities/product/detail/product-detail.component.html
@@ -10,13 +10,9 @@
           <div class="box box-primary">
             <div class="box-body box-profile">
               <p>
-                <a href="http://localhost/intell/public/uploads/products/ZBy1iqjmf9Lf.jpg">
+                <a>
                   <abbr title="Show Product Image">
-                    <img
-                      src="http://localhost/intell/public/uploads/products/ZBy1iqjmf9Lf.jpg"
-                      class="img-thumbnail img-responsive"
-                      alt=""
-                    />
+                    <img src="/content/assets/image-resources/no-product-img.png" class="img-thumbnail img-responsive" alt="" />
                   </abbr>
                 </a>
               </p>
