--- a/src/main/webapp/app/entities/sell/update/sell-update.component.html
+++ b/src/main/webapp/app/entities/sell/update/sell-update.component.html
@@ -86,7 +86,7 @@
             <tr>
               <td colspan="3" style="text-align: right; font-weight: bold">
                 Total
-                <span class="font-size-9"> (Excluding Vat) </span>
+                <!-- <span class="font-size-9"> (Excluding Vat) </span> -->
               </td>
               <td colspan="2"><input type="text" disabled="disabled" class="form-control text-center" [value]="calculeTotal()" /></td>
             </tr>
