--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -33,3 +33,15 @@
   background-size: contain;
 }
  */
+
+.icon-product-alert {
+  color: red;
+  opacity: 0.8;
+  font-size: 20px;
+  text-shadow: 1px 1px 1px #ccc;
+}
+.icon-product-no-alert {
+  color: #fff;
+  opacity: 0.8;
+  font-size: 20px;
+}
