--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -63,21 +63,21 @@
               <span>{{ 'Télécharger produit vrac' }} </span>
             </a>
           </li> -->
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a routerLink="subcategorie" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
               <span>{{ 'imprimer le code à barres' }} </span>
             </a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a routerLink="subcategorie" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
               <span>{{ 'Imprimer CB par facture' }} </span>
             </a>
           </li> -->
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a routerLink="subcategorie" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
               <span>{{ 'Articles endommagés' }}</span>
             </a>
-          </li>
+          </li> -->
         </ul>
       </li>
 
