--- a/src/main/webapp/app/entities/report/report/report.component.html
+++ b/src/main/webapp/app/entities/report/report/report.component.html
@@ -464,28 +464,26 @@
 
     <!-- Product Report -->
     <div class="modal fade" id="productModal" tabindex="-1" role="dialog">
-      <form method="POST" action="http://localhost/intell/public/admin/report/product-report" accept-charset="UTF-8">
-        <input name="_token" type="hidden" value="psKiNhgO0gn5nEnAkhnDgwSAnHwlhZMCFLiEozrx" />
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-              <h4 class="modal-title">Product Report</h4>
-            </div>
-            <div class="modal-body">
-              <div class="form-group">
-                <div class="row">
-                  <label for="Product" class="col-sm-2">Product</label>
-                  <div class="col-sm-10">
-                    <select class="form-control" name="product_id">
-                      <option value="all">Tous les produits</option>
-                      <option *ngFor="let product of products" [ngValue]="product">{{ product.name }}</option>
-                    </select>
-                  </div>
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+            <h4 class="modal-title">Product Report</h4>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <div class="row">
+                <label for="Product" class="col-sm-2">Product</label>
+                <div class="col-sm-10">
+                  <select class="form-control" name="product_id">
+                    <option value="all">Tous les produits</option>
+                    <option *ngFor="let product of products" [ngValue]="product">{{ product.name }}</option>
+                  </select>
                 </div>
               </div>
+            </div>
 
-              <!-- <div class="form-group"> 
+            <!-- <div class="form-group"> 
                 <div class="row">
                    <label for="Branch" class="col-sm-2">Branch</label> 
                   <div class="col-sm-10"> 
@@ -506,50 +504,49 @@
                 </div>  
               </div> -->
 
-              <div class="form-group">
-                <div class="row">
-                  <label for="From" class="col-sm-2">From</label>
-                  <div class="col-sm-10">
-                    <!-- <input class="form-control dateTime" placeholder="yyyy-mm-dd" name="from"
+            <div class="form-group">
+              <div class="row">
+                <label for="From" class="col-sm-2">From</label>
+                <div class="col-sm-10">
+                  <!-- <input class="form-control dateTime" placeholder="yyyy-mm-dd" name="from"
                                             type="text"> -->
-                    <input
-                      id="field_date"
-                      data-cy="date"
-                      type="datetime-local"
-                      class="form-control"
-                      name="date"
-                      formControlName="date"
-                      placeholder="YYYY-MM-DD HH:mm"
-                    />
-                  </div>
+                  <input
+                    id="field_date"
+                    data-cy="date"
+                    type="datetime-local"
+                    class="form-control"
+                    name="date"
+                    formControlName="date"
+                    placeholder="YYYY-MM-DD HH:mm"
+                  />
                 </div>
               </div>
+            </div>
 
-              <div class="form-group">
-                <div class="row">
-                  <label for="To" class="col-sm-2">To</label>
-                  <div class="col-sm-10">
-                    <input
-                      id="field_date"
-                      data-cy="date"
-                      type="datetime-local"
-                      class="form-control dateTime"
-                      name="date"
-                      formControlName="date"
-                      placeholder="YYYY-MM-DD HH:mm"
-                    />
-                  </div>
+            <div class="form-group">
+              <div class="row">
+                <label for="To" class="col-sm-2">To</label>
+                <div class="col-sm-10">
+                  <input
+                    id="field_date"
+                    data-cy="date"
+                    type="datetime-local"
+                    class="form-control dateTime"
+                    name="date"
+                    formControlName="date"
+                    placeholder="YYYY-MM-DD HH:mm"
+                  />
                 </div>
               </div>
+            </div>
 
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary" (click)="generateProductsReport()">Generate Report</button>
-              </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary" data-dismiss="modal" (click)="generateProductsReport()">Generate Report</button>
             </div>
           </div>
         </div>
-      </form>
+      </div>
     </div>
     <!-- Product Report Ends-->
 
